--- a/dredd.yml
+++ b/dredd.yml
@@ -1,11 +1,8 @@
 reporter: apiary
-custom:
-  apiaryApiKey: b2e56e9d42811043be252968f850b5df
-  apiaryApiName: posobota
 dry-run: null
 hookfiles: null
 sandbox: false
-server: 'php -S 0.0.0.0:8000 -t web'
+server: 'php -S 0.0.0.0:3000 -t web'
 server-wait: 3
 init: false
 names: false
@@ -22,5 +19,5 @@ level: info
 timestamp: false
 silent: false
 path: []
-blueprint: posobota-apiary.apib
-endpoint: 'http://localhost:8000'
+blueprint: apiary.apib
+endpoint: 'http://localhost:3000'
