Add simple php test

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "silex/silex": "~1.2"
     },
     "require-dev": {
-        "ddelnano/dredd-hooks-php": "~1.0.0"
+        "ddelnano/dredd-hooks-php": "~1.0.0",
+        "phpunit/phpunit": "3.7.*"
     }
 }
